Add 404 png in 404 page

--- a/source/404.rst
+++ b/source/404.rst
@@ -3,18 +3,6 @@ Page Not Found
 
 Sorry, the page you requested was not found.
 
-Contents
---------
-
-.. toctree::
-   :maxdepth: 2
-
-   introduction
-   contribute
-   agent
-   collector
-   compliance
-   knowledge.base
-   howto
-
-
+.. image:: _static/404.png
+   :scale: 100
+   :align: center
